# bsp-example

l4/: Cargo.toml
l4/.cargo/: config.toml
l4/src/: main.rs
u0/: Cargo.toml
u0/.cargo/: config.toml
u0/src/: main.rs
uart-echo/: Cargo.toml
uart-echo/src/: lib.rs
