[package]
edition = "2021"
name = "u0"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "78ca904", features = [ "defmt", "time-driver-any", "stm32u083rc", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "78ca904", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "78ca904", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "78ca904", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = 2
lto = true
panic = "abort"
